DB생명 버전 업데이트

--- a/ott_project/src/main/resources/templates/error.html
+++ b/ott_project/src/main/resources/templates/error.html
@@ -4,44 +4,44 @@
     <meta charset="UTF-8">
     <title>404 Error - Page Not Found</title>
     <style>
-    body {
-      background-color: #3617CE;
-      font-family: Arial, sans-serif;
-      color: #fff;
-      text-align: center;
-    }
+        body {
+          background-color: #007a3e; /* 주어진 초록색 배경 */
+          font-family: Arial, sans-serif;
+          color: white; /* 흰색 텍스트 */
+          text-align: center;
+        }
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+        .container {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+        }
 
-    h1 {
-      font-size: 3rem;
-      margin: 0;
-      padding: 0;
-    }
+        h1 {
+          font-size: 3rem;
+          margin: 0;
+          padding: 0;
+        }
 
-    p {
-      font-size: 1.2rem;
-      margin: 10px 0;
-    }
+        p {
+          font-size: 1.2rem;
+          margin: 10px 0;
+        }
 
-    a {
-      color: #FF404E;
-      text-decoration: none;
-      border-bottom: 2px solid #FF404E;
-      transition: all 0.3s ease-in-out;
-    }
+        a {
+          color: #FF404E;
+          text-decoration: none;
+          border-bottom: 2px solid #FF404E;
+          transition: all 0.3s ease-in-out;
+        }
 
-    a:hover {
-      color: #fff;
-      background-color: #FF404E;
-    }
-  </style>
+        a:hover {
+          color: #fff;
+          background-color: #FF404E;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
