--- a/ott_project/src/main/resources/templates/login/loginForm.html
+++ b/ott_project/src/main/resources/templates/login/loginForm.html
@@ -5,7 +5,7 @@
     <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
     <style>
         body {
-            background-color: #3617CE;
+            background-color: #007a3e;
             color: white;
         }
         .container {
@@ -19,14 +19,14 @@
         h2 {
             font-size: 32px;
             font-weight: bold;
-            color: #3617CE;
+            color: #007a3e;
             margin-bottom: 10px;
         }
         p {
            color: #FF404E;
         }
         label {
-            color: #3617CE;
+            color: #007a3e;
             font-weight: bold;
             font-size: 18px;
         }
@@ -48,7 +48,7 @@
 
         button[type="submit"] {
             color: white;
-            background-color: #3617CE;
+            background-color: #007a3e;
             border: none;
             padding: 5px 5px;
             border-radius: 5px;
@@ -57,7 +57,7 @@
         }
         button[type="button"] {
             color: white;
-            background-color: #3617CE;
+            background-color: #007a3e;
             border: none;
             padding: 5px 5px;
             border-radius: 5px;
@@ -72,7 +72,7 @@
 <body>
 
 <div class="container">
-
+    <img class="ci-image" src="https://www.idbins.com/pcweb/bizxpress/cmy/__media/img_ci_10.png" alt="DB그룹 CI 이미지">
     <div class="py-5 text-center">
         <h2>로그인</h2>
     </div>
