--- a/ott_project/src/main/resources/templates/members/createMemberForm.html
+++ b/ott_project/src/main/resources/templates/members/createMemberForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <style>
       body {
-        background-color: #3617CE;
+        background-color: #007a3e;
       }
       .container {
         margin: 0 auto;
@@ -15,13 +15,13 @@
       h1 {
         font-size: 32px;
         font-weight: bold;
-        color: #3617CE;
+        color: #007a3e;
         margin-bottom: 10px;
       }
       a {
         font-size: 14px;
         color: white;
-        background-color: #FF404E;
+        background-color: #007a3e;
         padding: 5px 8px;
         border-radius: 5px;
         text-decoration: none;
@@ -34,12 +34,12 @@
       label {
         font-size: 18px;
         font-weight: bold;
-        color: #3617CE;
+        color: #007a3e;
         margin-bottom: 10px;
       }
       input[type="text"], button[type="submit"] {
         background-color: #EFEEEF;
-        color: #3617CE;
+        color: #007a3e;
         border: none;
         padding: 8px;
         margin-bottom: 8px;
@@ -49,7 +49,7 @@
       }
       button[type="submit"] {
         font-size: 14px;
-        background-color: #FF404E;
+        background-color: #007a3e;
         color: #FFFFFF;
         cursor: pointer;
       }
@@ -59,6 +59,7 @@
   </style>
   <body>
     <div class="container">
+      <img class="ci-image" src="https://www.idbins.com/pcweb/bizxpress/cmy/__media/img_ci_10.png" alt="DB그룹 CI 이미지">
       <form action="/members/new" method="post">
         <div class="form-group">
           <h1>회원 가입</h1>
