--- a/ott_project/src/main/resources/templates/members/quitcheck.html
+++ b/ott_project/src/main/resources/templates/members/quitcheck.html
@@ -7,7 +7,7 @@
 
     <style>
         body {
-            background-color: #3617CE;
+            background-color: #007a3e;
             color: white;
         }
         .container {
@@ -21,7 +21,7 @@
         h1 {
             font-size: 32px;
             font-weight: bold;
-            color: #3617CE;
+            color: #007a3e;
             margin-bottom: 10px;
         }
         p {
@@ -36,7 +36,7 @@
         }
         a {
             color: white;
-            background-color: #3617CE;
+            background-color: #007a3e;
             padding: 10px 20px;
             border-radius: 5px;
             text-decoration: none;
@@ -49,6 +49,7 @@
 </head>
 <body>
 <div class="container">
+  <img class="ci-image" src="https://www.idbins.com/pcweb/bizxpress/cmy/__media/img_ci_10.png" alt="DB그룹 CI 이미지">
   <div>
     <h1>회원 탈퇴</h1>
     <p>정말 탈퇴 하시겠습니까?</p>
