--- a/ott_project/src/main/resources/templates/ott/createOttForm.html
+++ b/ott_project/src/main/resources/templates/ott/createOttForm.html
@@ -6,7 +6,7 @@
   <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
   <style>
       body {
-        background-color: #3617CE;
+        background-color: #007a3e;
       }
       .container {
         margin: 0 auto;
@@ -19,13 +19,13 @@
       h1 {
         font-size: 32px;
         font-weight: bold;
-        color: #3617CE;
+        color: #007a3e;
         margin-bottom: 10px;
       }
       a {
         font-size: 14px;
         color: white;
-        background-color: #FF404E;
+        background-color: #007a3e;
         padding: 5px 8px;
         border-radius: 5px;
         text-decoration: none;
@@ -33,18 +33,18 @@
         margin-bottom: 5px;
       }
       a:hover {
-        background-color: #3617A2;
+        background-color: #FF404E;
       }
       label {
         font-size: 18px;
         font-weight: bold;
-        color: #3617CE;
+        color: #007a3e;
         margin-bottom: 10px;
       }
 
       input[type="text"], button[type="submit"] {
         background-color: #EFEEEF;
-        color: #3617CE;
+        color: #007a3e;
         border: none;
         padding: 8px;
         margin-bottom: 8px;
@@ -55,7 +55,7 @@
 
       button[type="submit"] {
         font-size: 14px;
-        background-color: #FF404E;
+        background-color: #007a3e;
         color: #FFFFFF;
         cursor: pointer;
       }
@@ -66,6 +66,7 @@
 </head>
   <body>
   <div class="container">
+    <img class="ci-image" src="https://www.idbins.com/pcweb/bizxpress/cmy/__media/img_ci_10.png" alt="DB그룹 CI 이미지">
     <form action="/ott/new" method="post">
       <div class="form-group">
         <h1>OTT 개설 신청</h1>
