DB 연결, thymeleaf 접속 수정

--- a/ott_project/src/main/resources/templates/members/createMemberForm.html
+++ b/ott_project/src/main/resources/templates/members/createMemberForm.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+  <title>Title</title>
+  <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
   <style>
       body {
         background-color: #007a3e;
