--- a/ott_project/src/main/resources/templates/ott/ottinfo.html
+++ b/ott_project/src/main/resources/templates/ott/ottinfo.html
@@ -95,7 +95,7 @@
   $(document).ready(function() {
       $('.del-link').click(function(event) {
           event.preventDefault();
-          console.log(event);
+          console.log("event" + event);
           var ottIdKey = $(this).data('ott-id-key');
           var form = $('<form action="/ott/ottinfo/' + ottIdKey + '" method="get"></form>');
           $('body').append(form);
